# just-py-bash

./: .gitignore  .gitmodules  Makefile  README.md  ROADMAP.md  VERSIONING.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: auto-tag.yml  bundled-runtime-release.yml  bundled-runtime-sync.yml  ci.yml  full-ci.yml  maintainer-approval.yml  pr-guard.yml  release.yml  upstream-sync.yml
docs/: wrapping-plan.md
examples/: README.md  configuration_and_runtimes.py  custom_commands_async.py  custom_commands_sync.py  filesystem_surfaces.py  network_access.py  option_hooks.py  parser_and_command_registry.py  quickstart_async.py  quickstart_sync.py  sandbox.py  security_helpers.py  transforms.py
just_bash_bundled_runtime/: .gitignore  MANIFEST.in  README.md  hatch_build.py  pyproject.toml  setup.py
just_bash_bundled_runtime/src/just_bash_bundled_runtime/: __init__.py
just_bash_bundled_runtime/tools/: runtime_config.py  sync_version.py  vendor_runtime.py
just_py_bash/: README.md  hatch_build.py  pyproject.toml
just_py_bash/src/just_bash/: __init__.py  _api.py  _async_api.py  _async_bridge.py  _backend_runtime.py  _bridge.py  _bridge_protocol.py  _cli.py  _command_registry.py  _exceptions.py  _fs.py  _models.py  _node_provider.py  _option_hooks.py  _options.py  _parser.py  _runtime_compat.py  _sandbox.py  _security.py  _session_fs.py  _transform.py  _types.py  _worker_source.py
just_py_bash/src/just_py_bash/: _api.py  _bridge.py  _types.py
just_py_bash/tools/: build_packaged_runtime.sh  sync_just_bash.py
scripts/: bootstrap-just-bash.sh  build-packaged-runtime.sh  vendor_node_provider.py
src/just_py_bash/: __init__.py  _api.py  _async_api.py  _async_bridge.py  _bridge.py  _codec.py  _custom_commands.py  _exceptions.py  _models.py  _options.py  _types.py  _worker_source.py
tests/: AGENTS.md  conftest.py  helpers.py  test_api.py  test_conformance.py  test_phase1_property.py  test_phase2_custom_commands.py  test_phase2_custom_commands_property.py  test_phase3_packaging.py
tests/api/: test_broader_exports.py  test_cli.py  test_examples.py  test_filesystem_session_api.py  test_from_options_and_bridge_failures.py  test_fs_config_api.py  test_option_parity_api.py  test_session_api.py
tests/contracts/: test_backend_overrides.py  test_bundled_runtime_hatch_build.py  test_custom_commands.py  test_custom_commands_properties.py  test_distributions.py  test_node_provider.py  test_optional_runtimes.py  test_release_metadata.py
tests/js/: reference.mjs
tests/parity/: test_async_curated_scenarios.py  test_async_generated_transcripts.py  test_broader_export_parity.py  test_capability_parity.py  test_curated_scenarios.py  test_filesystem_configs.py  test_generated_transcripts.py  test_option_parity.py  test_session_fs_api.py
tests/support/: fake_backend.py  harness.py  parity_cases.py  reference.mjs  reference_exports.mjs  reference_worker.mjs
tests/tools/: test_sync_just_bash.py
tools/: release_metadata.py
