[project]
name = "just-py-bash"
version = "0.1.0"
description = "A Python wrapper around the just-bash virtual shell"
readme = "README.md"
authors = [
    { name = "Nathan Gage", email = "nathan@sweetspot.so" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
]

[project.scripts]
just-py-bash = "just_py_bash:main"

[dependency-groups]
dev = [
    "coverage[toml]>=7.10.7",
    "hypothesis>=6.142.4",
    "pytest>=9.0.0",
    "pytest-xdist>=3.6.1",
]
lint = [
    "mypy>=1.11.2",
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
line-length = 120
target-version = "py311"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "B",
    "I",
    "Q",
    "RUF100",
    "UP",
]
flake8-quotes = { inline-quotes = "double", multiline-quotes = "double" }

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
executionEnvironments = [
    { root = ".", extraPaths = ["src"] },
    { root = "tests", extraPaths = ["src"], reportPrivateImportUsage = false },
]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "src"
strict = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = ["error"]
markers = [
    "api: public Python API contract tests",
    "parity: differential wrapper-vs-upstream tests",
    "generated: property-based generated scenarios",
    "contract: future-facing capability contracts",
    "packaging: distribution and installation contracts",
]

[tool.coverage.run]
patch = ["subprocess"]
concurrency = ["multiprocessing", "thread"]
branch = true
data_file = ".coverage/.coverage"
source = ["src/just_py_bash"]

[tool.coverage.paths]
source = [
    "src/just_py_bash",
    "*/site-packages/just_py_bash",
    "*\\site-packages\\just_py_bash",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
