[project]
name = "just-py-bash-workspace"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "coverage[toml]>=7.10.7",
    "hypothesis>=6.142.4",
    "just-py-bash[node]",
    "pytest>=9.0.0",
    "pytest-xdist>=3.6.1",
]
lint = [
    "mypy>=1.11.2",
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]

[tool.uv]
package = false
default-groups = ["dev", "lint"]

[tool.uv.sources]
just-py-bash = { path = "just_py_bash", editable = true }
just-bash-bundled-runtime = { path = "just_bash_bundled_runtime", editable = true }

[tool.ruff]
line-length = 120
target-version = "py311"
include = ["just_py_bash/src/**/*.py", "just_bash_bundled_runtime/src/**/*.py", "just_bash_bundled_runtime/hatch_build.py", "tests/**/*.py", "scripts/**/*.py"]
extend-exclude = ["just_bash_bundled_runtime/src/just_bash_bundled_runtime/runtime"]

[tool.ruff.lint]
extend-select = [
    "B",
    "I",
    "Q",
    "RUF100",
    "UP",
]
flake8-quotes = { inline-quotes = "double", multiline-quotes = "double" }

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
include = ["just_py_bash/src", "just_bash_bundled_runtime/src", "tests", "scripts"]
exclude = ["just_bash_bundled_runtime/src/just_bash_bundled_runtime/runtime"]
venvPath = "."
venv = ".venv"
executionEnvironments = [
    { root = ".", extraPaths = ["just_py_bash/src", "just_bash_bundled_runtime/src"] },
    { root = "tests", extraPaths = ["just_py_bash/src", "just_bash_bundled_runtime/src"], reportPrivateImportUsage = false },
    { root = "just_bash_bundled_runtime/src", extraPaths = ["just_bash_bundled_runtime/src"] },
]

[tool.mypy]
python_version = "3.11"
files = ["just_py_bash/src", "just_bash_bundled_runtime/src", "tests", "scripts"]
exclude = ["just_bash_bundled_runtime/src/just_bash_bundled_runtime/runtime/"]
mypy_path = "just_py_bash/src"
strict = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = ["error"]
markers = [
    "api: public Python API contract tests",
    "parity: differential wrapper-vs-upstream tests",
    "generated: property-based generated scenarios",
    "contract: future-facing capability contracts",
    "packaging: distribution and installation contracts",
]

[tool.coverage.run]
patch = ["subprocess"]
concurrency = ["multiprocessing", "thread"]
branch = true
data_file = ".coverage/.coverage"
source = ["just_py_bash/src/just_py_bash"]

[tool.coverage.paths]
source = [
    "just_py_bash/src/just_py_bash",
    "*/site-packages/just_py_bash",
    "*\\site-packages\\just_py_bash",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "if __name__ == .__main__.:",
]
