[project]
name = "just-py-bash"
version = "0.1.0"
description = "A Python wrapper around the just-bash virtual shell"
readme = "README.md"
authors = [
    { name = "Nathan Gage", email = "nathan@sweetspot.so" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
]

[project.optional-dependencies]
node = [
    "just-bash-bundled-runtime>=22,<23",
]

[project.scripts]
just-py-bash = "just_bash:main"

[tool.uv.sources]
just-bash-bundled-runtime = { path = "../just_bash_bundled_runtime" }

[tool.uv.build-backend]
module-name = "just_bash"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
