[project]
name = "just-py-bash"
dynamic = ["version"]
description = "A Python wrapper around the just-bash virtual shell"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Nathan Gage", email = "contact@nathangage.co" }]
license = "MIT"
requires-python = ">=3.11"
keywords = [
  "asyncio",
  "bash",
  "just-bash",
  "sandbox",
  "shell",
  "subprocess",
  "virtual-filesystem",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["pydantic>=2.13.0"]

[project.urls]
Homepage = "https://github.com/nathan-gage/just-py-bash"
Source = "https://github.com/nathan-gage/just-py-bash"
Documentation = "https://github.com/nathan-gage/just-py-bash/blob/main/just_py_bash/README.md"
Issues = "https://github.com/nathan-gage/just-py-bash/issues"
Changelog = "https://github.com/nathan-gage/just-py-bash/releases"

[project.optional-dependencies]
node = ["just-bash-bundled-runtime>=22,<23"]

[project.scripts]
just-py-bash = "just_bash:main"
just-py-bash-shell = "just_bash:shell_main"

[tool.uv.sources]
just-bash-bundled-runtime = { path = "../just_bash_bundled_runtime" }

[tool.hatch.build]
artifacts = [
  "src/just_bash/_vendor/just-bash/package.json",
  "src/just_bash/_vendor/just-bash/dist/**",
  "src/just_bash/_vendor/just-bash/vendor/**",
]
exclude = ["src/just_bash/__pycache__/**"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "2.14.1"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/just_bash"]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "pyproject.toml",
  "hatch_build.py",
  "tools/build_packaged_runtime.sh",
  "src/just_bash/**",
]

[build-system]
requires = ["hatchling>=1.29.0", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"
